2007-07-03  Marek Safar  <marek.safar@gmail.com>

	* class.cs (Indexer): Check return type as soon as possible.
	
	* cs-parser.jay: Initialize implicit_value_parameter_type for interface
	members too.
	
	* ecore.cs (VarExpr.DoResolveLValue): Set eclass value.
	
	* expression.cs (Invocation.Error_InvalidArguments): Show type only.
	
	* parameter.cs (Parameter): Use expression type when it is available.
	
	* support.cs (ReflectionParameters.ParameterDesc): Show an extension
	method modifier for the first parameter only.

2007-06-24  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #81938
	* typemanager.cs (ChangeType): Fixed couple of char conversions.
	
	* constant.cs: Tide up an exception message.

2007-06-22  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs (SimpleName.DoSimpleNameResolve): Better error reporting when
	an uninitialized variable is used.
	
	* expression.cs (LocalVariableReference.DoResolve): Ditto.

2007-06-22  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs (SimpleName.TypeOrNamespaceNotFound): Allow to override type
	not found error handling.

	* expression.cs (ArrayCreation): Removed redundant fields and little bit
	simplified.
	(ArrayCreation.ResolveArrayElement): To be ready to customization.
	(ArrayCreation.DoResolve): Simplified.
	(ImplicitlyTypedArrayCreation.DoResolve): Implicitly typed arrays have
	its own resolve process.
	(ImplicitlyTypedArrayCreation.ResolveArrayElement): Conversion magic.

2007-06-20  Marek Safar  <marek.safar@gmail.com>

	* namespace.cs (NamespaceEntry.Error_AmbiguousTypeReference): Print
	more error details.
	
2007-06-20  Marek Safar  <marek.safar@gmail.com>

	* cs-tokenizer.cs: Removed var related stuff.
	
	* ecore.cs (Expression.ResolveAsContextualType): Introduced new method.
	(VarExpr): Changed to derive from SimpleName. VarExpr now behaves as
	a type and a keyword at same time.
	
	* decl.cs (MembeName.GetTypeExpression): Create VarExpr when type name
	matches to "var".
	